# Moonafly

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  bot.py  command_help.py  init_Moonafly.bat  init_Moonafly.sh  main.py  math_calc.py  pyproject.toml  requirements.txt  response_public.py  response_terminal.py  responses.py  run_moonafly.bat  run_moonafly.sh  search_dict.py  search_weather.py  weather.py
.github/: CODEOWNERS
.github/workflows/: auto_assign_reviewer.yml  ci.yml  lint.yml
data/json/: Moonafly_structure.json  clipboard.json  develop_mode_directory_structure.json  directory_structure.json  math_calc_allow_names.json  terminal_mode_directory_structure.json
data/txt/help_cmd_info/: apply.txt  approve.txt  approve_approve.txt  approve_list.txt  approve_show.txt  calendar.txt  calendar_get.txt  cd.txt  clear.txt  clipboard.txt  clipboard_del.txt  clipboard_get.txt  clipboard_list.txt  clipboard_save.txt  clipboard_show.txt  cloak.txt  dict_en-zh_TW.txt  dict_en.txt  end.txt  exit.txt  game_1A2B.txt  game_1A2B_rank.txt  game_1A2B_start.txt  game_1A2B_stop.txt  hash.txt  hash_algo.txt  hash_list.txt  hash_show.txt  help.txt  issue.txt  issue_list.txt  issues.txt  issues_list.txt  jump.txt  ls.txt  (+34 more)
json/: allowed_names.json  directory_structure.json  vocabulary_items.json
src/: bot.py  constants.py  develop_mode.py  main.py  normal_mode.py  response_normal.py  response_public.py  response_terminal.py  responses.py  search_dict.py  split_message.py  terminal_mode.py
src/cmd/: apply.py  approve.py  clipboard.py  command_help.py  dict.py  game_1A2B.py  hash.py  jump.py  maintenance.py  math_calc.py  news.py  online_judge.py  primes.py  random_vocab_review.py  random_vocab_test.py  remote.py  search_dict.py  tree.py  weather.py
src/command/: apply.py  approve.py  calendar.py  clipboard.py  command_help.py  dict.py  game_1A2B.py  hash.py  issue.py  issues.py  jump.py  maintenance.py  math_calc.py  math_count.py  news.py  online_judge.py  primes.py  random_number.py  random_vocab_review.py  random_vocab_test.py  remote.py  remote_file.py  remote_terminal.py  search_github.py  search_online_judge.py  shortcut.py  todo.py  translate.py  tree.py  weather.py
txt/help_commands_information/: cd.txt  help.txt  ls.txt  pwd.txt  tree.txt
(+14 files in other folders)
