[tool.poetry]
name = "moonafly"
version = "2.12.1"
description = "Moonafly isn't just a discord bot."
authors = ["LifeAdventurer <life0adventurer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
discord-py = "^2.3.2"
requests = "^2.31.0"
psutil = "^5.9.8"
googletrans-py = "^4.0.0"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
