[tool.poetry]
name = "moonafly"
version = "2.17.2"
description = "Moonafly isn't just a discord bot."
authors = ["LifeAdventurer <life0adventurer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
discord-py = "^2.3.2"
googletrans-py = "^4.0.0"
httpx = "^0.26.0"
psutil = "^5.9.8"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
